--- a/src/css/style.css
+++ b/src/css/style.css
@@ -35,8 +35,15 @@ body {
     background-color: #222;
 }
 
+.soon {
+    text-align: center;
+}
+
 .soon h1 {
     color: #fff;
     font-size: 2.5em;
 }
 
+.soon a {
+    color: aqua;
+}
